--- a/exercises/htmlandcss/spiced web site/style.css
+++ b/exercises/htmlandcss/spiced web site/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: rgb(242, 240, 250);
+    background-color: #f8f8ff;
     color: white;
 }
 
@@ -11,17 +11,17 @@ header {
     padding: 20px;
     margin: 10px;
     background-color: white;
-    height: 70px;
+    height: 55px;
 }
 
 #spiced {
-    height: 20px;
+    height: 25px;
     float: left;
 }
 
 #menu-button {
-    height: 40px;
-    width: 40px;
+    height: 25px;
+    width: 20px;
     float: right;
     position: absolute;
     right: 30px;
@@ -31,41 +31,74 @@ header {
     width: 100%;
     margin: 0 auto;
 }
+
 #spices {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    margin: 0;
+    filter: brightness(0.8);
+}
+.get-start-button {
+    position: absolute;
+    left: 50%;
+    bottom: 30%;
+    padding: 5px 25px;
+    background-color: #ffcc33;
+    color: #cc6600;
+    border-radius: 15px;
+    border: 1px solid #cc6600;
+    transform: translateX(-50%);
+    font-size: 20px;
+    z-index: 1;
 }
 
 h1 {
-    color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #2f4f4f;
+    font-family: Roboto;
+    padding: 0 20px;
 }
 
+h2 {
+    color: white;
+    font-size: 35px;
+    font-style: italic;
+    /* text-align: center; */
+    position: absolute;
+    bottom: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
 h3 {
     margin: 0;
     position: absolute;
 }
 
-h3:nth-child(1) {
-    color: aqua;
-    top: 0;
-    left: 0;
+img[alt="icon"] {
+    width: 50px;
+    margin: 0px 20px;
 }
 
-h3:nth-child(2) {
-    color: aqua;
-    top: 0;
-    right: 0;
+.about {
+    width: 100%;
+    display: table;
+    background-color: #cccccc;
+    /* position: absolute;
+    top: 58%; */
+}
+aside {
+    display: inline-flex;
+    width: 40%;
+    padding: 20px;
+    margin: 20px;
+    color: black;
 }
 
-h3:nth-child(3) {
-    color: aqua;
-    bottom: 0;
-    right: 0;
+p {
+    margin: 0;
 }
 
-h3:nth-child(4) {
-    color: aqua;
-    bottom: 0;
-    left: 0;
+footer {
+    background-color: #666666;
+    font-size: 10px;
+    padding: 8px 30px;
 }
