--- a/exercises/htmlandcss/spiced web site/style.css
+++ b/exercises/htmlandcss/spiced web site/style.css
@@ -1,10 +1,13 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     background-color: #f8f8ff;
     color: white;
+    height: 100%;
 }
 
 header {
@@ -23,8 +26,8 @@ header {
     height: 25px;
     width: 20px;
     float: right;
-    position: absolute;
-    right: 30px;
+    /* position: absolute;
+    right: 30px; */
 }
 
 .container {
@@ -34,18 +37,19 @@ header {
 
 #spices {
     width: 100%;
+    display: block;
     margin: 0;
     filter: brightness(0.8);
 }
 .get-start-button {
     position: absolute;
     left: 50%;
-    bottom: 30%;
+    bottom: 50%;
     padding: 5px 25px;
     background-color: #ffcc33;
     color: #cc6600;
-    border-radius: 15px;
-    border: 1px solid #cc6600;
+    border-radius: 20px;
+    border: 3px solid #cc6600;
     transform: translateX(-50%);
     font-size: 20px;
     z-index: 1;
@@ -63,7 +67,7 @@ h2 {
     font-style: italic;
     /* text-align: center; */
     position: absolute;
-    bottom: 40%;
+    bottom: 60%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
@@ -81,24 +85,66 @@ img[alt="icon"] {
 .about {
     width: 100%;
     display: table;
+    /* padding: 30px; */
     background-color: #cccccc;
+    margin-top: -10;
     /* position: absolute;
     top: 58%; */
 }
 aside {
-    display: inline-flex;
-    width: 40%;
-    padding: 20px;
-    margin: 20px;
-    color: black;
+    /* display: inline-flex; */
+    width: 100%;
+    display: table;
+}
+.pseudo-cell {
+    width: 50%;
+    display: table-cell;
+    padding: 30px;
+}
+
+.second {
+    text-align: right;
 }
 
 p {
     margin: 0;
+    color: black;
 }
 
 footer {
     background-color: #666666;
     font-size: 10px;
     padding: 8px 30px;
+    position: relative;
+    width: 100%;
+    bottom: 0%;
+}
+
+@media screen and (max-width: 600px) {
+    .get-start-button {
+        bottom: 76%;
+    }
+
+    h2 {
+        bottom: 82%;
+        width: 100%;
+        /* padding: 10px; */
+        font-size: 25px;
+        text-align: center;
+    }
+    aside {
+        width: 80%;
+        padding: 20px;
+        margin: 20px;
+    }
+    .about {
+        display: block;
+    }
+    .pseudo-cell {
+        width: 100%;
+        display: block;
+        margin: 0;
+        padding: 30px;
+        text-align: center;
+    }
 }
