--- a/week-2/andrea-encounters/ticker/exercise ticker/style.css
+++ b/week-2/andrea-encounters/ticker/exercise ticker/style.css
@@ -1,12 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-}
-
-#ticker-line {
-    position: absolute;
-    /* left: 50%; */
-    white-space: nowrap;
+    color: black;
 }
 
 #ticker {
@@ -15,6 +10,11 @@
     height: 1.5em;
     overflow: hidden;
     border: 3px solid violet;
+}
+
+#ticker-line {
+    position: absolute;
+    white-space: nowrap;
 }
 
 #ticker-line a {
