--- a/week-1/exercises/htmlandcss/spiced web site/style.css
+++ b/week-1/exercises/htmlandcss/spiced web site/style.css
@@ -6,8 +6,9 @@
 
 body {
     background-color: #f8f8ff;
-    color: white;
+    color: rgba(37, 27, 27, 0.11);
     height: 100%;
+    overflow: hidden;
 }
 
 header {
@@ -126,11 +127,63 @@ p {
 
 footer {
     background-color: #666666;
-    font-size: 14px;
+    font-size: 10px;
     padding: 8px 30px;
     position: relative;
     width: 100%;
     bottom: 0%;
+}
+
+.side-nav {
+    position: absolute;
+
+    /* left: 0; */
+}
+
+a {
+    text-decoration: none;
+    color: rgb(54, 64, 211);
+}
+#menu-x {
+    /* width: 100%; */
+    margin-bottom: 10px;
+    position: absolute;
+    margin: 0 30px;
+    right: 0;
+}
+
+#menu-x a {
+    /* position: absolute; */
+    /* left: 55px; */
+    color: rgb(44, 42, 42);
+}
+
+#side-nav {
+    position: absolute;
+    background-color: white;
+    width: 20%;
+    height: 100%;
+    font-size: 2em;
+    padding: 20px;
+    text-decoration: none;
+    transition-property: transform;
+    transition-duration: 2s;
+    transform: translateX(100);
+}
+
+#on {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100%;
+    font-size: 2em;
+    padding: 20px;
+    text-decoration: none;
+    transition-property: transform;
+    transition-duration: 2s;
+    transform: translateX(0);
 }
 
 @media screen and (max-width: 600px) {
