--- a/week-1/exercises/htmlandcss/spiced web site/style.css
+++ b/week-1/exercises/htmlandcss/spiced web site/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #f8f8ff;
     color: rgba(37, 27, 27, 0.11);
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 header {
@@ -24,11 +24,13 @@ header {
 }
 
 #menu-button {
-    height: 25px;
-    width: 20px;
     float: right;
     /* position: absolute;
     right: 30px; */
+}
+#hamburguer-menu {
+    height: 45px;
+    width: 35px;
 }
 
 .container {
@@ -121,69 +123,79 @@ aside > div {
 p {
     margin: 0;
     color: black;
+    width: 65%;
     position: absolute;
     left: 20%;
 }
 
 footer {
     background-color: #666666;
-    font-size: 10px;
-    padding: 8px 30px;
+    color: rgb(168, 164, 164);
+    font-size: 12px;
+    padding: 10px 30px;
     position: relative;
     width: 100%;
     bottom: 0%;
 }
 
-.side-nav {
-    position: absolute;
-
-    /* left: 0; */
-}
-
 a {
     text-decoration: none;
     color: rgb(54, 64, 211);
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
-#menu-x {
-    /* width: 100%; */
+.menu-x {
     margin-bottom: 10px;
     position: absolute;
     margin: 0 30px;
     right: 0;
 }
 
-#menu-x a {
-    /* position: absolute; */
-    /* left: 55px; */
+.menu-x a {
     color: rgb(44, 42, 42);
+    font-family: roboto;
 }
 
-#side-nav {
-    position: absolute;
-    background-color: white;
-    width: 20%;
-    height: 100%;
-    font-size: 2em;
-    padding: 20px;
-    text-decoration: none;
-    transition-property: transform;
-    transition-duration: 2s;
-    transform: translateX(100);
-}
-
-#on {
-    position: absolute;
-    background-color: white;
+.overlay {
+    position: fixed;
+    z-index: 5;
     top: 0;
+    bottom: 0;
+    left: 0;
     right: 0;
+    background-color: #474e4e7e;
+    visibility: hidden;
+    transition: 2s;
+    transition: opacity 300ms ease-in-out;
+    opacity: 0;
+}
+
+.showOverlay {
+    visibility: visible;
+    opacity: 1;
+}
+
+.side-nav {
+    position: fixed;
+    right: -20%;
+    z-index: 5;
+    background-color: white;
     width: 20%;
     height: 100%;
     font-size: 2em;
     padding: 20px;
     text-decoration: none;
-    transition-property: transform;
+    transition-property: right;
     transition-duration: 2s;
-    transform: translateX(0);
+    transition-timing-function: ease-in-out;
+}
+
+.on {
+    right: 0;
+}
+
+.logout {
+    padding-top: 5px;
+    font-size: 0.5em;
 }
 
 @media screen and (max-width: 600px) {
@@ -224,9 +236,15 @@ a {
     }
     footer {
         height: 6vh;
-        padding: 17px 30px;
+        padding: 15px 30px;
     }
     .spices {
         height: 27vh;
+    }
+    .side-nav {
+        z-index: 5;
+        background-color: white;
+        width: 40%;
+        font-size: 1.5em;
     }
 }
