--- a/week-2/david-encounters/kitty-carousel/style.css
+++ b/week-2/david-encounters/kitty-carousel/style.css
@@ -33,18 +33,28 @@
 }
 
 #circles {
-    position: fixed;
-    z-index: 1;
-    width: 90px;
-    left: 50%;
-    top: 55%;
+    position: absolute;
+    top: 520px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+
+    /* position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 70%;
+     */
 }
 
 .circle {
     width: 18px;
     height: 18px;
     border-radius: 50%;
-    border: 4px solid rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
+    background-color: transparent;
+    margin: 3px;
+}
+
+.on {
+    background-color: white;
 }
