--- a/week-1/exercises/htmlandcss/spiced web site/style.css
+++ b/week-1/exercises/htmlandcss/spiced web site/style.css
@@ -197,6 +197,51 @@ a {
     padding-top: 5px;
     font-size: 0.5em;
 }
+#pop-up-container {
+    position: fixed;
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #474e4e7e;
+}
+#pop-up {
+    position: fixed;
+    z-index: 5;
+    background-color: white;
+    border-radius: 5px;
+    color: black;
+    width: 35%;
+    height: 35%;
+    font-size: 10px;
+    padding: 20px;
+    text-decoration: none;
+}
+#pop-up p {
+    font-size: 18px;
+    margin: 5px;
+}
+#pop-up p strong {
+    font-size: 23px;
+    padding: 10px 0;
+}
+
+#close {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.close {
+    margin-right: 10px;
+    border: none;
+    font-weight: bold;
+    background-color: white;
+}
 
 @media screen and (max-width: 600px) {
     .get-start-button {
