--- a/week-3/david-encounter/connect4/connect4.css
+++ b/week-3/david-encounter/connect4/connect4.css
@@ -3,7 +3,6 @@
 }
 
 body {
-    /* background-color: rgba(248, 130, 242, 0.466); */
     display: flex;
     justify-content: center;
 
@@ -16,7 +15,7 @@ body {
 }
 
 .hole {
-    transition: all 600ms ease-in;
+    transition: all 800ms ease-in;
     width: 80px;
     height: 80px;
     border-radius: 30%;
@@ -61,7 +60,7 @@ body {
     position: fixed;
     visibility: hidden;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     z-index: 5;
     top: 0;
@@ -69,32 +68,54 @@ body {
     left: 0;
     right: 0;
     background-image: url("./balao.gif");
-    background-size: center;
+    /* background-size: center; */
     background-color: white;
     background-size: cover;
     transition: 0.5s ease-in-out;
 }
+
 .container div {
     /* background-color: rgb(0, 0, 0); */
+    display: flex;
+    justify-content: center;
     transition: opacity 0.5s ease-in;
-    border-radius: 50%;
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    text-align: center;
 }
-.play {
+#winner {
+    margin-top: 50px;
+
     transition: 0.5s ease-in-out;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     background-size: cover;
+}
+.winner-p {
+    margin-top: 120px;
+    font-size: 10em;
+    text-transform: uppercase;
+
+    color: rgb(19, 133, 62);
+}
+
+.no-winner {
+    visibility: hidden;
+    width: 500px;
+    font-size: 10em;
+    color: tomato;
+    text-transform: uppercase;
+
+    width: 100vw;
 }
 
 button {
+    margin: 73px;
     padding: 50px;
-    border: 30px solid rgb(102, 214, 135);
+    border: 10px solid rgb(102, 214, 135);
     text-transform: uppercase;
     border-radius: 25px;
-    font-size: 25px;
-    color: rgb(23, 160, 23);
+    font-size: 29px;
+    color: green;
     background-color: transparent;
     transition-duration: 0.4s;
 }
@@ -103,22 +124,3 @@ button:hover {
     background-color: #b1f7b3; /* Green */
     color: rgb(25, 68, 45);
 }
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.box {
-}
-/* 
-@keyframes loader {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        border-radius: 50%;
-        rotate: 180deg;
-    }
-} */
