change img title

--- a/week-3/david-encounter/connect4/connect4.css
+++ b/week-3/david-encounter/connect4/connect4.css
@@ -47,6 +47,7 @@ body {
     background-color: black;
     padding: 10px;
     border-radius: 53px;
+    box-shadow: 12px 12px 2px 1px rgba(61, 61, 65, 0.582);
 }
 
 .turn {
