--- a/week-4/spotfy-search/style.css
+++ b/week-4/spotfy-search/style.css
@@ -4,7 +4,6 @@
 body {
     font-family: "Roboto", sans-serif;
     background-color: black;
-    /* height: 100vh; */
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -28,7 +27,8 @@ a {
     margin: 50px 0;
 }
 
-h1 {
+h1,
+h2 {
     color: white;
     font-weight: 100;
     font-size: 20px;
