--- a/week-4/spotfy-search/style.css
+++ b/week-4/spotfy-search/style.css
@@ -22,7 +22,7 @@ a {
     margin: 0 10px;
 }
 
-.more-button {
+#more-button {
     visibility: hidden;
     margin: 50px 0;
 }
@@ -49,7 +49,7 @@ h2 {
 }
 
 input {
-    width: 244px;
+    width: 280px;
     height: 26px;
     border-radius: 25px;
     padding: 10px;
@@ -58,7 +58,7 @@ input {
 .search-fields {
     display: flex;
     justify-content: space-between;
-    width: 391px;
+    width: 430px;
 }
 
 select {
@@ -66,7 +66,7 @@ select {
     padding: 4px;
 }
 
-.submit-button {
+#submit-button {
     background-color: black;
     border-radius: 10px;
     padding: 0 10px;
