--- a/week-5/hb-express-porfolio/views/welcome.handlebars
+++ b/week-5/hb-express-porfolio/views/welcome.handlebars
@@ -1,10 +1,9 @@
 <h1>🌈 WELCOME TO MY PORTFOLIO 🌈</h1>
-<h2>Hello {{cohort}}</h2>
 <div>
     <ul>
         {{#projects}}
             <div class="projects">
-                <img src="/{{directory}}/screenshoot.png" />
+                <a href="/{{directory}}/index.html"><img src="/{{directory}}/screenshoot.png" />
                 <a href="/{{directory}}/index.html"><li>{{title}}</li></a>
             </div>
         {{/projects}}
